<resources>
    <string name="app_name">TicTacToe</string>
    <string name="btn00">""</string>
    <string name="btn01">""</string>
    <string name="btn02">""</string>
    <string name="btn10">""</string>
    <string name="btn11">""</string>
    <string name="btn12">""</string>
    <string name="btn20">""</string>
    <string name="btn21">""</string>
    <string name="btn22">""</string>
    <string name="XField">"X"</string>
    <string name="OField">"O"</string>
    <string name="EmptyField">""</string>
    <string name="PlayerOneWon">"Player One won!"</string>
    <string name="PlayerTwoWon">"Player Two won!"</string>
    <string name="Draw">"Draw!"</string>
    <string name="Reset">"Reset!"</string>
</resources>
